      Del Vecchio).
    - Previously, we would cache up to 16 old networkstatus documents
      indefinitely, if they came from nontrusted authorities. Now we
      discard them if they are more than 10 days old.
    - Detect and reject malformed DNS responses containing circular
      pointer loops.
    - Fix a memory leak when sending a 503 response for a networkstatus
      request.

  o Minor bugfixes:
    - When computing clock skew from directory HTTP headers, consider what
      time it was when we finished asking for the directory, not what
      time it is now.
    - Add some defensive programming to eventdns.c in an attempt to catch
      possible memory-stomping bugs.
    - Fix crash with "tor --list-fingerprint" (reported by seeess).
    - Expire socks connections if they spend too long waiting for the
      handshake to finish. Previously we would let them sit around for
      days, if the connecting application didn't close them either.
    - Stop using C functions that OpenBSD's linker doesn't like.
    - Detect and reject DNS replies containing IPv4 or IPv6 records with
      an incorrect number of bytes. (Previously, we would ignore the
      extra bytes.)
    - Fix as-yet-unused reverse IPv6 lookup code so it sends nybbles
      in the correct order.
    - Free memory held in recently-completed DNS lookup attempts on exit.
      This was not a memory leak, but may have been hiding memory leaks.
    - Don't launch requests for descriptors unless we have networkstatuses
      from at least half of the authorities.  This delays the first
      download slightly under pathological circumstances, but can prevent
      us from downloading a bunch of descriptors we don't need.
    - Do not log IPs with TLS failures for incoming TLS
      connections. (Fixes bug 382.)

  o Minor features:
    - Check for addresses with invalid characters at the exit as well
      as at the client, and warn less verbosely when they fail. You can